add remote adapter server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,12 @@ install(TARGETS ${PROJECT_NAME}
     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     COMPONENT sdl_atf)
 
+install(DIRECTORY "${CMAKE_SOURCE_DIR}/remote_atf_docker"
+    "${CMAKE_SOURCE_DIR}/data"
+    DESTINATION "${CMAKE_INSTALL_PREFIX}"
+    FILE_PERMISSIONS OWNER_WRITE OWNER_READ
+    COMPONENT sdl_atf)
+
 install(DIRECTORY "${CMAKE_SOURCE_DIR}/modules"
     "${CMAKE_SOURCE_DIR}/data"
     DESTINATION "${CMAKE_INSTALL_PREFIX}"
