--- a/remote_atf_docker/Dockerfile
+++ b/remote_atf_docker/Dockerfile
@@ -1,4 +1,4 @@
-from ubuntu:latest
+FROM ubuntu:18.04
 
 ENV TZ=Europe/Minsk
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
