--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,18 +74,18 @@ install(TARGETS ${PROJECT_NAME}
 install(DIRECTORY "${CMAKE_SOURCE_DIR}/remote_atf_docker"
     "${CMAKE_SOURCE_DIR}/data"
     DESTINATION "${CMAKE_INSTALL_PREFIX}"
-    FILE_PERMISSIONS OWNER_WRITE OWNER_READ
+    USE_SOURCE_PERMISSIONS
     COMPONENT sdl_atf)
 
 install(DIRECTORY "${CMAKE_SOURCE_DIR}/modules"
     "${CMAKE_SOURCE_DIR}/data"
     DESTINATION "${CMAKE_INSTALL_PREFIX}"
-    FILE_PERMISSIONS OWNER_WRITE OWNER_READ
+    USE_SOURCE_PERMISSIONS
     COMPONENT sdl_atf)
 
 install(DIRECTORY "${CMAKE_SOURCE_DIR}/tools"
     DESTINATION "${CMAKE_INSTALL_PREFIX}"
-    FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+    USE_SOURCE_PERMISSIONS
     COMPONENT sdl_atf)
 
 install(FILES "${CMAKE_SOURCE_DIR}/start.sh"
