--- a/atf_parallels/docker/Dockerfile
+++ b/atf_parallels/docker/Dockerfile
@@ -8,7 +8,7 @@ ARG openssl_lib_ver
 
 RUN apt-get update && apt-get -q -y install \
   locales sudo libssl${openssl_lib_ver} libssl-dev libusb-1.0-0 libbluetooth3 openssl liblua5.2-0 psmisc \
-  libexpat1 sqlite3 libqt5websockets5 net-tools iproute2 \
+  libexpat1 sqlite3 libqt5websockets5 libqt5core5a net-tools iproute2 \
   libssl-doc- libusb-1.0-doc- autotools-dev- binutils- build-essential- bzip2- cpp- \
   dpkg-dev- fakeroot- manpages- manpages-dev- qttranslations5-l10n- xdg-user-dirs- xml-core- dbus-
 
@@ -21,6 +21,10 @@ RUN locale-gen en_US.UTF-8 && update-locale LANG=en_US.UTF-8
 ENV LC_ALL en_US.UTF-8
 
 RUN chmod u+s /sbin/ifconfig /sbin/ip && mkdir /home/developer
+
+RUN apt-get update && apt-get -q -y install binutils
+
+RUN strip --remove-section=.note.ABI-tag /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
 
 COPY entrypoint.sh /usr/bin/
 
